# Fractal-Chart-App-v2

./: LICENSE  README.md  app.py  pyproject.toml  replit.nix
templates/: footer.html  home.html  jobItem.html  nav.html
